EXTANGULAR-156 : Kitchensink build issue fix.

--- a/examples/ext-angular-kitchensink/angular.json
+++ b/examples/ext-angular-kitchensink/angular.json
@@ -60,11 +60,9 @@
             ],
             "styles": [
               "src/styles.css",
-              "kitchensink-theme/resources/Theme.kitchensink-all.css",
-              "ext-modern-runtime/material/material-all.css"
+              "kitchensink-theme/resources/Theme.kitchensink-all.css"
             ],
             "scripts": [
-              "ext-modern-runtime/modern.engine.enterprise.js"
             ]
           },
           "configurations": {
