--- a/examples/ext-react-kitchensink/package.json
+++ b/examples/ext-react-kitchensink/package.json
@@ -54,8 +54,8 @@
     "webpack-dev-server": "3.11.1"
   },
   "scripts": {
-    "start": "node ./extract-code.js && react-scripts start",
-    "build": "node ./extract-code.js && react-scripts build",
+    "start": "node ./extract-code.js && cross-env REACT_APP_build_v=7.4.0.0 react-scripts start",
+    "build": "node ./extract-code.js && cross-env REACT_APP_build_v=7.4.0.0 PUBLIC_URL=/ExtReact/7.4.0/kitchensink react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
