EXTANGULAR-156 : Kitchensink regression issue fix

--- a/examples/ext-angular-kitchensink/angular.json
+++ b/examples/ext-angular-kitchensink/angular.json
@@ -40,6 +40,8 @@
         "build": {
           "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "vendorSourceMap": true,
+            "preserveSymlinks": true,
             "outputPath": "dist/ext-angular-kitchensink",
             "customWebpackConfig": {
               "path": "./webpack.config.js",
@@ -81,11 +83,11 @@
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true,
+              "buildOptimizer": false,
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "8mb",
+                  "maximumWarning": "10mb",
                   "maximumError": "10mb"
                 },
                 {
