--- a/examples/ext-angular-kitchensink/package.json
+++ b/examples/ext-angular-kitchensink/package.json
@@ -32,7 +32,10 @@
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2",
     "hammerjs": "~2.0.8",
-    "copy-webpack-plugin": "^5.1.1"
+    "highlight.js": "~9.18.1",
+    "highlightjs": "~9.16.2",
+    "copy-webpack-plugin": "^5.1.1",
+    "webpack-bundle-analyzer": "~3.6.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.12",
