--- a/examples/ext-react-kitchensink/public/ext-modern-runtime/package.json
+++ b/examples/ext-react-kitchensink/public/ext-modern-runtime/package.json
@@ -1,35 +1,37 @@
 {
-  "_from": "@sencha/ext-modern-runtime@^7.4.0",
-  "_id": "@sencha/ext-modern-runtime@7.4.0",
+  "_args": [
+    [
+      "@sencha/ext-modern-runtime@7.5.0",
+      "D:\\Projects\\Sencha Bridges 7.5\\gen-it\\examples\\ext-react-kitchensink"
+    ]
+  ],
+  "_from": "@sencha/ext-modern-runtime@7.5.0",
+  "_id": "@sencha/ext-modern-runtime@7.5.0",
   "_inBundle": false,
-  "_integrity": "sha512-UFpGxnke2XJ0bXKQ7eJj9IAMs/KLVSmbbolBMewinXtu1JlESTDA/QgJLUtKvMeq1Y/E15gX20jIH6dlxECXSw==",
+  "_integrity": "sha512-+srGR1FZLsUj/MDe3KDBDP8fzlBo9KOtXQTlvZ/NfaeBH0rShTxik94Kax+gzeTrXAN1ySqa4laj/ZSuMA/msw==",
   "_location": "/@sencha/ext-modern-runtime",
   "_phantomChildren": {},
   "_requested": {
-    "type": "range",
+    "type": "version",
     "registry": true,
-    "raw": "@sencha/ext-modern-runtime@^7.4.0",
+    "raw": "@sencha/ext-modern-runtime@7.5.0",
     "name": "@sencha/ext-modern-runtime",
     "escapedName": "@sencha%2fext-modern-runtime",
     "scope": "@sencha",
-    "rawSpec": "^7.4.0",
+    "rawSpec": "7.5.0",
     "saveSpec": null,
-    "fetchSpec": "^7.4.0"
+    "fetchSpec": "7.5.0"
   },
   "_requiredBy": [
-    "#USER",
     "/"
   ],
-  "_resolved": "http://test.npm.sencha.com/@sencha%2fext-modern-runtime/-/ext-modern-runtime-7.4.0.tgz",
-  "_shasum": "92e68a4f5b5b13b986682c24fe6db5b4fccb21c7",
-  "_spec": "@sencha/ext-modern-runtime@^7.4.0",
-  "_where": "C:\\Users\\dhande\\Desktop\\ExtReactKS\\ext-react-kitchensink-app6",
+  "_resolved": "http://test.npm.sencha.com/@sencha%2fext-modern-runtime/-/ext-modern-runtime-7.5.0.tgz",
+  "_spec": "7.5.0",
+  "_where": "D:\\Projects\\Sencha Bridges 7.5\\gen-it\\examples\\ext-react-kitchensink",
   "author": {
     "name": "Sencha"
   },
-  "bundleDependencies": false,
   "dependencies": {},
-  "deprecated": false,
   "devDependencies": {},
   "homepage": "https://github.com/sencha/",
   "keywords": [],
@@ -42,5 +44,5 @@
     "url": "git+https://github.com/sencha/"
   },
   "scripts": {},
-  "version": "7.4.0"
+  "version": "7.5.0"
 }
